# universal-agent-connector

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitpod.yml  ADOPTION_ANALYTICS_SUMMARY.md  AIR_GAPPED_MODE.md  ANALYTICS_ENDPOINTS.md  CHANGELOG.md  CHARGEBACK_ENDPOINTS.md  CHARGEBACK_SUMMARY.md  CLOUD_DEPLOYMENT_FEATURE.md  CODE_OF_CONDUCT.md  COMMUNITY_FORUMS_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTION_GUIDELINES_SUMMARY.md  COST_TRACKING_FEATURE.md  Dockerfile  FEATURE_VALIDATION_REPORT.md  GITHUB_PUBLICATION_CHECKLIST.md  GITHUB_SETUP.md  GOVERNANCE_INTERCEPTOR_README.md  GRAPHQL_API_FEATURE.md  GRAPHQL_API_IMPLEMENTATION.md  HELM_CHART_FEATURE.md  IMPORT_FIXES_SUMMARY.md  INTEGRATION_TEST_README.md  INTEGRATION_TEST_SUMMARY.md  JAG-001_IMPLEMENTATION_SUMMARY.md  JAG-001_TEST_COMPLETION_SUMMARY.md  JAG-002_IMPLEMENTATION_SUMMARY.md  JAG-002_TEST_COMPLETION_SUMMARY.md  JAG-003_IMPLEMENTATION_SUMMARY.md  JAG-003_TEST_COMPLETION_SUMMARY.md  JAG-004_IMPLEMENTATION_SUMMARY.md  JAG-004_TEST_COMPLETION_SUMMARY.md  JAVASCRIPT_SDK_IMPLEMENTATION.md  LEGAL_DOCUMENTS_ENDPOINTS.md  LEGAL_DOCUMENTS_SUMMARY.md  LICENSE  (+87 more)
.claude/: CLAUDE.md
.devcontainer/: README.md  devcontainer.json  setup.sh  start.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
ai_agent_connector/: __init__.py
cli/: .gitignore  CLI_IMPLEMENTATION_SUMMARY.md  CLI_TEST_CASES.md  CLI_TEST_SUMMARY.md  MIGRATION_GUIDE.md  README.md  (+4 more)
sdk/: MANIFEST.in  PYTHON_SDK_FEATURE.md  PYTHON_SDK_TEST_SUMMARY.md  QUICK_REFERENCE.md  README.md  pyproject.toml  pytest.ini  setup.py
sdk/examples/: README.md  advanced_usage.py  basic_usage.py
sdk/tests/: README.md  __init__.py  test_client.py  test_exceptions.py
sdk/universal_agent_connector/: __init__.py  client.py  exceptions.py
(+508 files in other folders)
